--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -14,7 +14,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Daydash</title>
-        
+
   <style type="text/css">
     p{
     margin:10px 0;
@@ -433,14 +433,14 @@
                           <table align="left" border="0" cellspacing="0" cellpadding="0" width="100%" style="width:100%;">
                         <tr>
                         <![endif]-->
-                          
+
                         <!--[if mso]>
                           <td valign="top" width="390" style="width:390px;">
                         <![endif]-->
 
                         <table align="left" border="0" cellpadding="0" cellspacing="0" style="max-width:390px;" width="100%" class="mcnTextContentContainer">
                           <tbody>
-                            <tr>                      
+                            <tr>
                               <td valign="top" class="mcnTextContent" style="padding-top:0; padding-left:18px; padding-bottom:9px; padding-right:18px;">
                                 Use this area to offer a short preview of your email's content.
                               </td>
@@ -451,7 +451,7 @@
                         <!--[if mso]>
                         </td>
                         <![endif]-->
-                    
+
                         <!--[if mso]>
                         <td valign="top" width="210" style="width:210px;">
                         <![endif]-->
@@ -465,11 +465,11 @@
                             </tr>
                           </tbody>
                         </table>
-                        
+
                         <!--[if mso]>
                         </td>
                         <![endif]-->
-                                
+
                         <!--[if mso]>
                         </tr>
                         </table>
@@ -480,12 +480,6 @@
                 </table>
               </td>
             </tr>
-
-
-
-
-
-
 
             <!-- Header -->
             <tr class="header">
@@ -498,7 +492,9 @@
                           <tbody>
                             <tr>
                               <td class="mcnImageContent" valign="top" style="padding-right: 9px; padding-left: 9px; padding-top: 0; padding-bottom: 0;">
-                                <a href="http://daydash.co/"><img src="<?php echo url('/src/images/theme/logo.png'); ?>" /></a>
+                                <a href="http://daydash.co/">
+                                  <%= image_tag "#{App.domain}/src/images/theme/logo.png" %>
+                                </a>
                                 <table style="width:564px;" class="mcpreview-image-uploader">
                                 </table>
                               </td>
@@ -512,7 +508,7 @@
               </td>
             </tr>
 
-            <%= yield %>         
+            <%= yield %>
             <!-- Footer -->
             <tr class="footer">
               <td valign="top" id="templateFooter">
@@ -529,7 +525,7 @@
                             </tr>
                           </tbody>
                         </table>
-                        <!--            
+                        <!--
                           <td class="mcnDividerBlockInner" style="padding: 18px;">
                           <hr class="mcnDividerContent" style="border-bottom-color:none; border-left-color:none; border-right-color:none; border-bottom-width:0; border-left-width:0; border-right-width:0; margin-top:0; margin-right:0; margin-bottom:0; margin-left:0;" />
                         -->
@@ -545,7 +541,7 @@
                         <table align="left" border="0" cellspacing="0" cellpadding="0" width="100%" style="width:100%;">
                         <tr>
                         <![endif]-->
-                
+
                         <!--[if mso]>
                         <td valign="top" width="600" style="width:600px;">
                         <![endif]-->
@@ -562,7 +558,7 @@
                         <!--[if mso]>
                         </td>
                         <![endif]-->
-                                
+
                         <!--[if mso]>
                         </tr>
                         </table>
