--- a/app/views/organizer_mailer/order.html.erb
+++ b/app/views/organizer_mailer/order.html.erb
@@ -9,7 +9,7 @@
             <table align="left" border="0" cellspacing="0" cellpadding="0" width="100%" style="width:100%;">
             <tr>
             <![endif]-->
-    
+
             <!--[if mso]>
             <td valign="top" width="600" style="width:600px;">
             <![endif]-->
@@ -18,10 +18,10 @@
                 <tr>
                   <td valign="top" class="mcnTextContent" style="padding-top:0; padding-right:18px; padding-bottom:9px; padding-left:18px;">
                     <h1 style="background: black; color: white; padding: 5px; margin-bottom: 3px; display: inline-block;">
-                      Hi Bow, we’ve got your order!
+                      Someone just booked your event!
                     </h1>
                     <h1 style="padding: 0px 5px; padding-bottom: 30px;">
-                      Just one more step :)
+                      And here’s the detail :)
                     </h1>
                   </td>
                 </tr>
@@ -30,7 +30,7 @@
             <!--[if mso]>
             </td>
             <![endif]-->
-                    
+
             <!--[if mso]>
             </tr>
             </table>
@@ -67,10 +67,12 @@
                       <tr>
                         <td class="mcnTextContent" valign="top" style="padding:0 9px 0 9px;">
                           <strong>Give Me Soap เวิร์คช็อปทำสบู่ของขวัญ</strong><br>
-                          <p style="font-size: 14px; font-weight: 200;">
-                            Sunday 04 September, 02:54<br />
-                            ShopSpot HQ, BTS อารีย์
-                            [<a href="#">ดูแผนที่</a>]
+                          <br />
+                          <label style="font-size: 12px; font-weight: bold; color: #999;">YOUR CUSTOMER</label>
+                          <p style="font-size: 13px; font-weight: 200; margin: 0px; color: #444;">
+                            <strong>Bow Kraivanich</strong><br />
+                            bow.kraivanich@gmail.com<br />
+                            0804569465
                           </p>
                         </td>
                       </tr>
@@ -171,7 +173,7 @@
             <table align="left" border="0" cellspacing="0" cellpadding="0" width="100%" style="width:100%;">
             <tr>
             <![endif]-->
-    
+
             <!--[if mso]>
             <td valign="top" width="600" style="width:600px;">
             <![endif]-->
@@ -179,71 +181,20 @@
               <tbody>
                 <tr>
                   <td valign="top" class="mcnTextContent" style="padding-top:0; padding-right:18px; padding-bottom:9px; padding-left:18px;">
-                    <p style="font-size: 24px; font-weight: 200; padding-top: 30px; padding-bottom: 15px; border-bottom: 1px solid black;">วิธีการชำระเงิน</p>
-                    <p style="font-weight: 200;">
-                      1. เลือกโอนยอดเงิน 1,300 บาท ผ่านธนาคารที่คุณสะดวก
-                    </p>
-                    <table width="100%">
-                      <tbody>
-                        <tr>
-                          <td width="50%" style="vertical-align: top;">
-                            <table>
-                              <tr>
-                                <td width="60" valign="top">
-                                  <img src="/src/images/email/order/kbank-logo.png" width="50" />
-                                </td>
-                                <td valign="top">
-                                  <p style="font-size: 13px; font-weight: 200; margin-top: 0px;">
-                                    ธนาคารกสิกรไทย สาขาเอกมัย<br />
-                                    บัญชีออมทรัพย์ <strong>001-3-42202-8</strong>​<br />
-                                    ชื่อบัญชี นางสาวลินดา ไกรวณิช
-                                  </p>
-                                </td>
-                              </tr>
-                            </table>
-                          </td>
-                          <td width="50%" style="vertical-align: top;">
-                            <table>
-                              <tr>
-                                <td width="60" valign="top">
-                                  <img src="/src/images/email/order/scb-logo.png" width="50" />
-                                </td>
-                                <td valign="top">
-                                  <p style="font-size: 13px; font-weight: 200; margin-top: 0px;">
-                                    ธนาคารไทยพาณิชย์<br />
-                                    สาขาเอกมัย พาวเวอร์ เซ็นเตอร์<br />
-                                    บัญชีออมทรัพย์ <strong>250-217556-5</strong>​<br />
-                                    ชื่อบัญชี นางสาวลินดา ไกรวณิช
-                                  </p>
-                                </td>
-                              </tr>
-                            </table>
-                          </td>
-                        </tr>
-                      </tbody>
-                    </table>
-                    <p style="font-weight: 200; padding-bottom: 30px;">
-                      2. แจ้งยืนยันการชำระเงินโดยส่งรูปถ่ายหลักฐานการโอนเงิน<br />
-                      พร้อมรหัสการโอนเงิน <strong style="color: #21A4A5; ">AB123</strong> ผ่านทาง: Line @daydash (มี @ ข้างหน้า)
-                    </p>
-                    <p style="font-weight: 200; padding-bottom: 30px;">
-                      3. เราจะส่งตั๋วให้คุณทางอีเมลเมื่อเราได้รับแจ้งยืนยันการชำระเงินแล้วภายใน 60 นาที :)
-                    </p>
+                    <br />
                     <table width="100%">
                       <tr>
-                        <td align="center" style="color: red;">
-                          <strong>*** กรุณาทำการชำระเงินภายใน 3 ชั่วโมง นับจากการสั่งซื้อ ***</strong><br />
-                          (ชำระภายใน วันที่ 25 กันยายน 2016 เวลา 11:03 PM)
+                        <td align="center">
+                          <a href="#" style="font-weight: 200; color: black;">คุณสามารถดูรายละเอียดคำสั่งซื้อทั้งหมดของอีเว้นท์นี้ได้โดยคลิกที่นี่</a>
                         </td>
                       </tr>
                     </table>
-                    <br />
                     <br />
                     <table width="100%">
                       <tr>
                         <td align="center" style="background: #DFFFFB; padding: 15px; font-size: 14px; font-weight: 200;">
                           หากคุณพบปัญหาหรือมีคำถาม ต้องการความช่วยเหลือ สามารถติดต่อเราได้ที่<br />
-                          Tel. 080-456-9465  หรือ Line: @daydash                        
+                          Tel. 080-456-9465  หรือ Line: @daydash
                         </td>
                       </tr>
                     </table>
@@ -254,7 +205,7 @@
             <!--[if mso]>
             </td>
             <![endif]-->
-                    
+
             <!--[if mso]>
             </tr>
             </table>
