--- a/app/views/payment_mailer/ticket.html.erb
+++ b/app/views/payment_mailer/ticket.html.erb
@@ -9,7 +9,7 @@
             <table align="left" border="0" cellspacing="0" cellpadding="0" width="100%" style="width:100%;">
             <tr>
             <![endif]-->
-    
+
             <!--[if mso]>
             <td valign="top" width="600" style="width:600px;">
             <![endif]-->
@@ -30,7 +30,7 @@
             <!--[if mso]>
             </td>
             <![endif]-->
-                    
+
             <!--[if mso]>
             </tr>
             </table>
@@ -172,7 +172,7 @@
             <table align="left" border="0" cellspacing="0" cellpadding="0" width="100%" style="width:100%;">
             <tr>
             <![endif]-->
-    
+
             <!--[if mso]>
             <td valign="top" width="600" style="width:600px;">
             <![endif]-->
@@ -277,7 +277,7 @@
                                             </tr>
                                             <tr>
                                               <td class="mcnTextContent" valign="top" style="padding:0 9px 0 9px;">
-                                                <img src="/src/images/email/order/qr.png" width="100%" />
+                                                <%= image_tag "#{App.domain}/src/images/email/order/qr.png", width: "100%"  %>
                                               </td>
                                             </tr>
                                           </tbody>
@@ -425,7 +425,7 @@
                       <tr>
                         <td align="center" style="background: #DFFFFB; padding: 15px; font-size: 14px; font-weight: 200;">
                           หากคุณพบปัญหาหรือมีคำถาม ต้องการความช่วยเหลือ สามารถติดต่อเราได้ที่<br />
-                          Tel. 080-456-9465  หรือ Line: @daydash                        
+                          Tel. 080-456-9465  หรือ Line: @daydash
                         </td>
                       </tr>
                     </table>
@@ -437,7 +437,7 @@
             <!--[if mso]>
             </td>
             <![endif]-->
-                    
+
             <!--[if mso]>
             </tr>
             </table>
