--- a/app/views/client/profile/settings.html.erb
+++ b/app/views/client/profile/settings.html.erb
@@ -96,7 +96,7 @@
                 <%= f.text_field :twitter, value: @user.twitter, class: 'form-control' %>
               </div>
               <div class="form-group col-xs-12 col-md-6">
-                <label>instagram URL</label>
+                <label>Instagram URL</label>
                 <%= f.text_field :instagram, value: @user.instagram, class: 'form-control' %>
               </div>
               <div class="form-group col-xs-12 col-md-6">
