--- a/app/views/organizer/profile/show.html.erb
+++ b/app/views/organizer/profile/show.html.erb
@@ -13,10 +13,10 @@
                   <%= @organizer.company %>
                 </div>
                 <div class="social" style="margin-top: 20px">
-                  <a href="<%= "https://www.facebook.com/#{@organizer.facebook}" || '#' %>" class="icon icon-md icon-facebook" target="_blank"></a>
-                  <a href="<%= "https://www.instagram.com/#{@organizer.instagram}" || '#' %>" class="icon icon-md icon-instagram" target="_blank"></a>
-                  <a href="<%= "https://www.twitter.com/#{@organizer.twitter}" || '#' %>" class="icon icon-md icon-twitter" target="_blank"></a>
-                  <a href="<%= @organizer.url || '#' %>" class="icon icon-md icon-website" target="_blank"></a>
+                  <a href="<%= @organizer.facebook.present? ? "https://www.facebook.com/#{@organizer.facebook}" : '#' %>" class="icon icon-md icon-facebook" <%= 'target="_blank"' if @organizer.facebook.present? %>></a>
+                  <a href="<%= @organizer.instagram.present? ? "https://www.instagram.com/#{@organizer.instagram}" : '#' %>" class="icon icon-md icon-instagram" <%= 'target="_blank"' if @organizer.instagram.present? %>></a>
+                  <a href="<%= @organizer.twitter.present? ? "https://www.twitter.com/#{@organizer.twitter}" : '#' %>" class="icon icon-md icon-twitter" <%= 'target="_blank"' if @organizer.twitter.present? %>></a>
+                  <a href="<%= @organizer.url || '#' %>" class="icon icon-md icon-website" <%= 'target="_blank"' if @organizer.facebook.present? %>></a>
                 </div>
               </div>
             </div>
