--- a/app/views/client/events/show.html.erb
+++ b/app/views/client/events/show.html.erb
@@ -13,8 +13,8 @@
           letter-spacing: 0.04em;">Daydash Exclusive</span>
       <% end %>
       <h1 class="title"><%= @event.title %></h1>
-      <div class="meta date" style="display: inline-block; float: left; color: #fff"><i class="icon icon-xs icon-calendar-white"></i> <%= @event.to_uptime %></div> &nbsp;
-      <div class="meta location" style="display: inline-block; float: left; margin-left: 10px" id="location" data-location-name="<%= @event.location_name %>" data-location-address="<%= @event.location_address %>"><i class="icon icon-xs icon-location-white"></i>
+      <div class="meta date" style="display: inline-block; float: left; color: #fff"><i class="icon icon-xs icon-calendar-white" style="padding-right: 20px"></i> <%= @event.to_uptime %></div> &nbsp;
+      <div class="meta location" style="display: inline-block; float: left; margin-left: 10px" id="location" data-location-name="<%= @event.location_name %>" data-location-address="<%= @event.location_address %>"><i class="icon icon-xs icon-location-white" style="padding-right: 20px"></i>
         <a href="https://www.google.co.th/maps?q=loc:<%= @event.latitude %>,<%= @event.longitude %>"  style="color: #fff" target="_blank"><%= @event.location_name %></a>
       </div>
     </div>
@@ -28,7 +28,7 @@
           <div class="col-xs-12 col-md-4">
             <div class="row">
               <div class="col-xs-2 col-md-12">
-                <%= image_tag @event.user.picture(:thumb), width: 70, height: 70, style: 'border-radius: 50px' %>
+                <%= image_tag @event.user.picture(:thumb), width: 70, height: 70, style: 'border-radius: 50px; border: 1px solid #EFEFEF' %>
                 <div style="position: absolute; top: 50px; left: 70px">
                   <i class="icon icon-md icon-verified"></i>
                 </div>
@@ -56,8 +56,10 @@
           </div>
         </div>
         <div class="row description">
-          <h2>Details</h2>
-          <%= auto_link(simple_format(@event.description), :link => :all, :html => {:target => "_blank"}) %>
+          <div class="col col-xs-12">
+            <h2>Details</h2>
+            <%= auto_link(simple_format(@event.description), :link => :all, :html => {:target => "_blank"}) %>
+          </div>
         </div>
         <div class="row guarantee">
           <div class="col col-xs-12 col-md-4">
@@ -109,14 +111,14 @@
             เริ่มต้นที่
           </div>
           <div style="position: absolute;top: 50px;font-size: 34px;">
-            ฿2,500
+            <%= convert_to_currency(@section.price) %>
           </div>
-          <div style="position: absolute;top: 50px;right: 20px;">
+          <!-- <div style="position: absolute;top: 50px;right: 20px;">
             จากราคาปกติ: ฿2,800
           </div>
           <div style="position: absolute;top: 70px;right: 20px;color: #D85B56;">
             ลดไป ฿300 (11% off)
-          </div>
+          </div> -->
 
           <button type="button" class="btn btn-block btn-daydash btn-daydash-lg btn-daydash-green-1 btn-buy" data-toggle="modal" data-target="#ticket-list-modal">
             Buy Ticket
