--- a/lib/generators/admin/dashboard/templates/dashboard.rb.erb
+++ b/lib/generators/admin/dashboard/templates/dashboard.rb.erb
@@ -1,4 +1,4 @@
-require "admin/base_dashboard"
+require 'admin/base_dashboard'
 
 class <%= class_name %>Dashboard < Admin::BaseDashboard
   # ATTRIBUTE_TYPES
