--- a/app/views/layouts/daydash.html.erb
+++ b/app/views/layouts/daydash.html.erb
@@ -128,6 +128,8 @@
             </div>
           </div>
         </div> -->
+
+        <%= Rails.application.config.paperclip_defaults %>
         <%= yield %>
       </div>
       <div id="footer">
