--- a/app/assets/stylesheets/pages/events.sass
+++ b/app/assets/stylesheets/pages/events.sass
@@ -901,7 +901,7 @@ label
         font-weight: inherit
         font-size: 14px
         line-height: 35px
-        list-style-image: asset-url('icons/icon-highlight-24px@2x.png')
+        list-style-image: asset-url('icon-highlight-12px.png')
         font-family: sans-serif
     .guarantee
       margin-left: -5px
