--- a/app/views/layouts/parts/_nav.html.erb
+++ b/app/views/layouts/parts/_nav.html.erb
@@ -12,6 +12,19 @@
 
     <ul class="nav nav-pills nav-daydash" id="<%= current_user.can_organizer? ? 'organizer-nav' : 'profile-nav' %>">
       <% if current_user.can_organizer? %>
+        <% if current_user.admin? %>
+          <style>
+            #profile-nav-section #profile-nav, #profile-nav-section #organizer-nav {
+              width: auto;
+            }
+          </style>
+          <li id="menu-user-list">
+            <%= link_to "ALL USER", admin_users_path %>
+          </li>
+          <li id="menu-transaction-list">
+            <%= link_to "ALL Transaction", admin_transactions_path %>
+          </li>
+        <% end %>
         <li id="menu-event-list">
           <%= link_to "Manage Event", organizer_events_path %>
         </li>
