--- a/app/views/organizer/parts/_event_form.html.erb
+++ b/app/views/organizer/parts/_event_form.html.erb
@@ -157,8 +157,8 @@
                     <tr>
                       <td>Ticket Title</td>
                       <td>Ticket Available</td>
-                      <td>Ticket Price From</td>
-                      <td>Ticket Price Sale</td>
+                      <td>Ticket Price (ราคาปกติ)</td>
+                      <td>Ticket Price (ราคาขาย)</td>
                       <!-- <td>Ticket Unit</td> -->
                       <td>From</td>
                       <td>To</td>
