--- a/app/views/organizer/profiles/show.html.erb
+++ b/app/views/organizer/profiles/show.html.erb
@@ -4,7 +4,7 @@
   <div class="slick" id="cover-slick">
     <% @covers.each do |cover| %>
       <div>
-        <div class="page-cover" style="height: 350px; background-image: url('<%= cover[:image] %>)">
+        <div class="page-cover" style="height: 350px; background-image: url('<%= cover[:image] %>')">
           <div class="info">
             <div class="container">
               <div class="organizer">
