--- a/app/views/layouts_mailer/parts/_order.html.erb
+++ b/app/views/layouts_mailer/parts/_order.html.erb
@@ -68,11 +68,18 @@
                         <td class="mcnTextContent" valign="top" style="padding:0 9px 0 9px;">
                           <p style="font-size: 18px;"><%= @event.title %></p>
                           <p style="font-size: 14px; font-weight: 200;">
-                            <% if @event.ticket_type.general? %>
-                              <%= @tickets.group(:event_date).count.count > 1 ? @tickets.first(:event_date) : "Multiple date" %><br />
+                            <% if @organizer.present? %>
+                              YOUR CUSTOMER <br>
+                              <b><%= @user.first_name %> <%= @user.last_name %></b><br>
+                              <%= @user.email %><br>
+                              <%= @user.phone %>
+                            <% else %>
+                              <% if @event.ticket_type.general? %>
+                                <%= @tickets.group(:event_date).count.count > 1 ? @tickets.first(:event_date) : "Multiple date" %><br />
+                              <% end %>
+                              <%= @event.location_name %>
+                              [<a href='https://www.google.co.th/maps?q=loc:<%= "#{@event.latitude},#{@event.longitude}" %>' target="_blank">ดูแผนที่</a>]
                             <% end %>
-                            <%= @event.location_name %>
-                            [<a href='https://www.google.co.th/maps?q=loc:<%= "#{@event.latitude},#{@event.longitude}" %>' target="_blank">ดูแผนที่</a>]
                           </p>
                         </td>
                       </tr>
