--- a/app/views/layouts/parts/_manage_nav.html.erb
+++ b/app/views/layouts/parts/_manage_nav.html.erb
@@ -11,7 +11,7 @@
       </div>
     </div>
 
-    <ul class="nav nav-pills nav-daydash nav-daydash-lg" id="<%= current_user.can_organizer? ? 'organizer-nav' : 'profile-nav' %>">
+    <ul class="nav nav-pills nav-daydash" id="<%= current_user.can_organizer? ? 'organizer-nav' : 'profile-nav' %>">
       <li class="organizer-event-nav-dashboard">
         <a href="#"><i class="icon icon-xs icon-order"></i> Dashboard</a>
       </li>
