--- a/app/views/organizer/parts/_section.html.erb
+++ b/app/views/organizer/parts/_section.html.erb
@@ -94,7 +94,7 @@
 <!-- Template -->
 <script id="new-ticket-template" type="x-tmpl-mustache">
   <div class="row section-ticket">
-    <div class="col-xs-4 form-group">
+    <div class="col-xs-12 col-md-4 form-group">
       <label for="tickets-name">Ticket name</label>
       <input type="text"
              name="new_ticket_names[]"
@@ -104,7 +104,7 @@
              class="form-control"
              required="true" />
     </div>
-    <div class="col-xs-2 form-group">
+    <div class="col-xs-12 col-mdxs-2 form-group">
       <label for="tickets-quantity">Quantity available</label>
       <input type="number"
              name="new_ticket_totals[]"
@@ -114,7 +114,7 @@
              class="form-control"
              required="true" />
     </div>
-    <div class="col-xs-2 form-group">
+    <div class="col-xs-12 col-md-2 form-group">
       <label for="tickets-price">Price</label>
       <input type="number"
              name="new_ticket_prices[]"
@@ -124,7 +124,7 @@
              class="form-control"
              required="true" />
     </div>
-    <div class="col-xs-2 form-group">
+    <div class="col-xs-12 col-md-2 form-group">
       <label for="tickets-discount">Discount</label>
       <input type="number"
              name="new_ticket_discounts[]"
@@ -133,7 +133,7 @@
              placeholder="eg. 100, 200"
              class="form-control" />
     </div>
-    <div class="col-xs-2 form-group">
+    <div class="col-xs-12 col-md-2 form-group">
       <label for="tickets-sales-end">Actions</label>
       <p>
         <a class="btn btn-sm btn-default btn-ticket-delete" href="javasctipt:;" onclick="return onTicketDelete(this);"><i class="fa fa-trash"></i></a>
@@ -142,7 +142,7 @@
     <div class="col-xs-6">
       <label for="tickets-sales-start">Ticket sales start</label>
       <div class="row">
-        <div class="col-xs-8 form-group">
+        <div class="col-xs-12 col-md-8 form-group">
           <div class='input-group date'>
             <input type="text"
                   name="new_ticket_start_date[]"
@@ -153,7 +153,7 @@
             </span>
           </div>
         </div>
-        <div class="col-xs-4 form-group">
+        <div class="col-xs-12 col-md-4 form-group">
           <div  class="input-group date">
             <input type="text"
                   name="new_ticket_start_time[]"
@@ -169,7 +169,7 @@
     <div class="col-xs-6">
       <label for="tickets-sales-start">Ticket sales end</label>
       <div class="row">
-        <div class="col-xs-8 form-group">
+        <div class="col-xs-12 col-md-8 form-group">
           <div class='input-group date'>
             <input type="text"
                   name="new_ticket_end_date[]"
@@ -180,7 +180,7 @@
             </span>
           </div>
         </div>
-        <div class="col-xs-4 form-group">
+        <div class="col-xs-12 col-md-4 form-group">
           <div  class="input-group date">
             <input type="text"
                   name="new_ticket_end_time[]"
